# PiPitch

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  USER_GUIDE.md
LV2/: LATENCY_OPTIMIZATIONS.md  McLeodPitchDetector.h  MidiNotes.h  NeuralNoteShared.h  NoteRangeConfig.h  OneBitPitchDetector.h  PiPitchShared.h  README.md  SwiftF0Detector.h  UltraLowLatencyGoertzel.h  gen_guitar_wav.py  latency_bench.cpp  manifest.ttl  neuralnote_guitar2midi.cpp  neuralnote_impl.cpp  neuralnote_monitor.cpp  neuralnote_ranges.conf  neuralnote_tune.conf  neuralnote_tune.conf.sample  neuralnote_tune.cpp  pipitch-connect.service  pipitch-connect.sh  pipitch.cpp  pipitch_impl.cpp  pipitch_ranges.conf  pipitch_test.cpp  pipitch_tune.conf  pipitch_tune.cpp  plugin.ttl  test_chords.lbl  test_mono.lbl
Lib/Model/: BasicPitch.cpp  BasicPitch.h  BasicPitchCNN.cpp  BasicPitchCNN.h
